--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@babel/core": "^7.20.5",
     "@babel/plugin-proposal-decorators": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
-    "typescript": "^5.0.1-rc"
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "parcel": "^2.8.3"
