--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@babel/core": "^7.20.5",
     "@babel/plugin-proposal-decorators": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
-    "typescript": "^5.0.4"
+    "typescript": "^5.0.4",
+    "uhtml": "^3.1.0"
   },
   "devDependencies": {
     "parcel": "^2.8.3"
