--- a/package.json
+++ b/package.json
@@ -2,26 +2,30 @@
   "name": "decorators",
   "version": "0.0.0",
   "description": "",
+  "type": "module",
+  "browserslist": "last 2 versions",
   "main": "index.js",
   "scripts": {
+    "lint": "eslint .",
     "dev": "rm -rf .parcel-cache && npx parcel --port=3333 ./index.html"
   },
   "author": "peter@peterkroener.de",
   "license": "MIT",
   "dependencies": {
-    "@babel/cli": "^7.19.3",
     "@babel/core": "^7.20.5",
     "@babel/plugin-proposal-decorators": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
-    "typescript": "^5.0.4",
+    "@sirpepe/ornament": "^0.0.3",
     "uhtml": "^3.1.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.6",
-    "@typescript-eslint/parser": "^5.59.6",
+    "@babel/cli": "^7.19.3",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.41.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "parcel": "^2.8.3"
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "parcel": "^2.8.3",
+    "typescript": "^5.0.4"
   }
 }
